<resources>
    <string name="app_name">UMDAlive</string>
    <string name="clubs">Clubs</string>
    <string name="dummy_club">DummyClub</string>
    <string name="username">Dummy</string>
    <string name="key_word">This is a dummy.</string>
    <string name="post">This is a dummy post</string>
    <string name="hint_for_club_posts">Posts will go here</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string-array name="keyword_list">
        <item name="academic">Academic</item>
        <item name="athletic">Athletic</item>
        <item name="intermurals">Intramurals</item>
        <item name="fitness">Fitness</item>
        <item name="food">Food</item>
        <item name="religious">Religious</item>
        <item name="movies">Movies</item>
        <item name="video_games">VideoGames</item>
        <item name="free">Free</item>
    </string-array>

    <string-array name="list_of_interests">
        <item name="Business">Business </item>
        <item name="Outdoors">Outdoors</item>
        <item name="Free">Free</item>
        <item name="Sports">Sports</item>
        <item name="Social">Social</item>
        <item name="Politics">Politics</item>
        <item name="Movies">Movies</item>
        <item name="Academics">Academics</item>
        <item name="Gaming">Gaming</item>
        <item name="Music">Music</item>
        <item name="Greek Life">Greek Life</item>
        <item name="Food">Food</item>
        <item name="Literature">Literature</item>
        <item name="Board Games">Board Games</item>
    </string-array>


    <string-array name="keyword_list2">
        <item name="select">Select a Keyword</item>
        <item name="academic">Academic</item>
        <item name="athletic">Athletic</item>
        <item name="intermurals">Intramurals</item>
        <item name="fitness">Fitness</item>
        <item name="food">Food</item>
        <item name="religious">Religious</item>
        <item name="movies">Movies</item>
        <item name="video_games">VideoGames</item>
        <item name="free">Free</item>
    </string-array>


    <string-array name="graduation_date">
        <item name="2020">2020</item>
        <item name="2019">2019</item>
        <item name="2018">2018</item>
        <item name="2017">2017</item>
        <item name="2016">2016</item>
    </string-array>

    <string-array name="major_list">
        <item name="mechanical_engineering">Mechanical Engineering</item>
        <item name="marketing">Marketing</item>
        <item name="computer_science">Computer Science</item>
        <item name="finance">Finance</item>
        <item name="chemistry">Chemistry</item>
        <item name="mathematics">Mathematics</item>
        <item name="english">English</item>
        <item name="history">History</item>
        <item name="music">Music</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="refresh_settings">Refresh User Data </string>
    <string name="version_number"> Version 0.6.3c </string>
    <string name="most_recent_posts">Most Recent Posts</string>
    <string name="login">Login</string>
    <string name="club_name">Club Name</string>
    <string name="location">Location</string>
    <string name="tap_for_more_info">More Info</string>
    <string name="here_is_the_description_of_the_event">Here is the description of the event.</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search">Search Clubs by Keyword</string>
    <string name="make_a_new_club">Make a New Club</string>
    <string name="chooseImage">Click icon to choose an image.</string>

    <string name="delete_button">Delete</string>
    <string name="delete_which_club">Which club would you like to delete?</string>
    <string name="delete_warning">Are you absolutely sure you want to delete this club?</string>
    <string name="delete_post">Delete a Post</string>
    <string name="delete_which_post">Which post would you like to delete?</string>
    <string name="delete_post_warning">Are you absolutely sure you want to delete this post?</string>
</resources>
