<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/first_prompt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/darkMaroon"
        android:textAlignment="center"
        android:text="@string/delete_which_post"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/edit_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/first_prompt2"
        android:inputType="text"
        android:padding="20dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/delete_button"
        android:textColor="@color/darkMaroon"
        android:layout_below="@+id/edit_title2"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:onClick="onClickDeletePost"/>

    <Button
        android:id="@+id/noButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteButton"
        android:layout_marginTop="76dp"
        android:layout_toEndOf="@+id/home_button"
        android:layout_toRightOf="@+id/home_button"
        android:onClick="onClickNoDeletePost"
        android:text="No"
        android:textColor="@color/darkMaroon"
        android:textSize="20dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warningPrompt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deleteButton"
        android:text="@string/delete_post_warning"
        android:textAlignment="center"
        android:textColor="@color/darkMaroon"
        android:textSize="20dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/yesButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/noButton2"
        android:layout_alignBottom="@+id/noButton2"
        android:layout_toLeftOf="@+id/home_button"
        android:layout_toStartOf="@+id/home_button"
        android:onClick="onClickYesDeletePost"
        android:text="Yes"
        android:textColor="@color/darkMaroon"
        android:textSize="20dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deleteButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/deleteButton"
        android:onClick="clickGoHome"
        android:text="Home"
        android:layout_marginBottom="20dp"
        android:textColor="@color/darkMaroon" />

</RelativeLayout>